--- a/PyCitySchools/main.ipynb
+++ b/PyCitySchools/main.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -404,14 +404,14 @@
        "0               65.172326  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a high-level snapshot of the distict's key metrics in a DataFrame\n",
-    "district_summary = pd.DataFrame({\n",
+    "district_summary_df = pd.DataFrame({\n",
     "    \"Total Schools\": [total_schools],\n",
     "    \"Total Students\": [total_students],\n",
     "    \"Total Budget\": [total_budget],\n",
@@ -423,21 +423,80 @@
     "})\n",
     "\n",
     "# Formatting\n",
-    "district_summary[\"Total Students\"] = district_summary[\"Total Students\"].map(\"{:,}\".format)\n",
-    "district_summary[\"Total Budget\"] = district_summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "district_summary_df[\"Total Budget\"] = district_summary_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
     "\n",
-    "district_summary\n"
+    "# DataFrame\n",
+    "district_summary_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use the code provided to select the school type\n",
-    "school_types = school_data.set_index([\"school_name\"])[\"type\"]\n",
-    "\n"
+    "school_types = school_data.set_index([\"school_name\"])[\"type\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total student count\n",
+    "per_school_counts = school_data[\"size\"].sum()\n",
+    "per_school_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.95290273168241"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate school budget and per capita spending per school\n",
+    "per_school_budget = school_data[\"budget\"].mean()\n",
+    "per_school_budget\n",
+    "\n",
+    "per_school_capita = per_school_budget / per_school_counts\n",
+    "per_school_capita"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the average test scores per school\n",
+    "per_school_math = district_data[\"math_score\"].mean()\n",
+    "\n",
+    "per_school_reading = district_data[\"reading_score\"].mean()"
    ]
   },
   {
@@ -446,8 +505,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the total student count\n",
-    "total_student_count = "
+    "# Calculate the number of students per school with math scores 70+\n",
+    "students_passing_math = district_data[\"math\"]"
    ]
   }
  ],
