--- a/PyCitySchools/main.ipynb
+++ b/PyCitySchools/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "15"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "39170"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "24649428"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "0               65.172326  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,71 +432,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the code provided to select the school type\n",
-    "school_types = school_data.set_index([\"school_name\"])[\"type\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39170"
+       "school_name\n",
+       "Huang High School        District\n",
+       "Figueroa High School     District\n",
+       "Shelton High School       Charter\n",
+       "Hernandez High School    District\n",
+       "Griffin High School       Charter\n",
+       "Wilson High School        Charter\n",
+       "Cabrera High School       Charter\n",
+       "Bailey High School       District\n",
+       "Holden High School        Charter\n",
+       "Pena High School          Charter\n",
+       "Wright High School        Charter\n",
+       "Rodriguez High School    District\n",
+       "Johnson High School      District\n",
+       "Ford High School         District\n",
+       "Thomas High School        Charter\n",
+       "Name: type, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate the total student count\n",
-    "per_school_counts = school_data[\"size\"].sum()\n",
+    "# Use the code provided to select the school type per school from school_data\n",
+    "school_types = school_data.set_index([\"school_name\"])[\"type\"]\n",
+    "school_types\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       4976\n",
+       "Johnson High School      4761\n",
+       "Hernandez High School    4635\n",
+       "Rodriguez High School    3999\n",
+       "Figueroa High School     2949\n",
+       "Huang High School        2917\n",
+       "Ford High School         2739\n",
+       "Wilson High School       2283\n",
+       "Cabrera High School      1858\n",
+       "Wright High School       1800\n",
+       "Shelton High School      1761\n",
+       "Thomas High School       1635\n",
+       "Griffin High School      1468\n",
+       "Pena High School          962\n",
+       "Holden High School        427\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total student count per school\n",
+    "per_school_counts = district_data[\"school_name\"].value_counts()\n",
     "per_school_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "41.95290273168241"
+       "school_name\n",
+       "Bailey High School      3124928.0\n",
+       "Cabrera High School     1081356.0\n",
+       "Figueroa High School    1884411.0\n",
+       "Ford High School        1763916.0\n",
+       "Griffin High School      917500.0\n",
+       "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate school budget and per capita spending per school\n",
-    "per_school_budget = school_data[\"budget\"].mean()\n",
-    "per_school_budget\n",
-    "\n",
-    "per_school_capita = per_school_budget / per_school_counts\n",
-    "per_school_capita"
+    "# Calculate per school budget \n",
+    "per_school_budget = district_data.groupby([\"school_name\"])[\"budget\"].mean()\n",
+    "per_school_budget.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School      628.0\n",
+       "Cabrera High School     582.0\n",
+       "Figueroa High School    639.0\n",
+       "Ford High School        644.0\n",
+       "Griffin High School     625.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate per school capita budget\n",
+    "per_school_capita = per_school_budget / per_school_counts\n",
+    "per_school_capita.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the average test scores per school\n",
-    "per_school_math = district_data[\"math_score\"].mean()\n",
+    "per_school_mathavg = district_data.groupby([\"school_name\"])[\"math_score\"].mean()\n",
     "\n",
-    "per_school_reading = district_data[\"reading_score\"].mean()"
+    "per_school_readingavg = district_data.groupby([\"school_name\"])[\"reading_score\"].mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       3318\n",
+       "Johnson High School      3145\n",
+       "Hernandez High School    3094\n",
+       "Rodriguez High School    2654\n",
+       "Wilson High School       2143\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the number of students per school with math scores 70+\n",
+    "per_school_passing_math = district_data.loc[district_data[\"math_score\"] >= 70]\n",
+    "per_school_passing_math.head()\n",
+    "\n",
+    "group_per_school_passing_math = per_school_passing_math[\"school_name\"].value_counts()\n",
+    "group_per_school_passing_math.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       4077\n",
+       "Johnson High School      3867\n",
+       "Hernandez High School    3748\n",
+       "Rodriguez High School    3208\n",
+       "Figueroa High School     2381\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the number of students per school with reading scores 70+\n",
+    "per_school_passing_reading = district_data.loc[district_data[\"reading_score\"] >= 70]\n",
+    "\n",
+    "group_per_school_passing_reading = per_school_passing_reading[\"school_name\"].value_counts()\n",
+    "group_per_school_passing_reading.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School      2719\n",
+       "Cabrera High School     1697\n",
+       "Figueroa High School    1569\n",
+       "Ford High School        1487\n",
+       "Griffin High School     1330\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the number of students per school that passed both math and reading with scores of 70+\n",
+    "per_school_passing_both = district_data[(district_data[\"math_score\"] >= 70) & (district_data[\"reading_score\"] >= 70)]\n",
+    "\n",
+    "group_per_school_passing_both = per_school_passing_both.groupby([\"school_name\"]).size()\n",
+    "group_per_school_passing_both.head()"
    ]
   },
   {
@@ -504,10 +670,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Calculate the number of students per school with math scores 70+\n",
-    "students_passing_math = district_data[\"math\"]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
